# dotfiles

./: .vimrc  custom.vim  install.md  pull.sh  reset_hardcoded_path.sh  userChrome.css
Scripts/: Cargo.toml  bar.rs  eww_tiramisu.sh  fetch.sh  is_rust_project.sh  launch.sh  playerctl.sh  powermenu.sh  screenshot.sh  visualizer.rs
Scripts/Resources/: cache_clean.sh  icons8-music-record-250.png~  lookup-icon-gtk  notification.png~  spotify_dl.sh
discocss/: custom.css  preload.js
eww/: bar.xml  eww.scss  eww.xml  notification.xml  song_metadata.xml  visualizer.xml
eww/scss/: bar.scss  notification.scss  song_metadata.scss  variables.scss  visualizer.scss
